Mise en place de docker

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-#Insérer nom d'utilisateur et mot de passe ou laisser vide
-DB_USER=
-DB_PASS=
+# Base de données
+DB_HOST=your_db_host
+DB_NAME=your_db_name
+DB_USER=your_db_user
+DB_PASS=your_db_password
+
+# Configuration MySQL
+MYSQL_ROOT_PASSWORD=your_mysql_root_password
+MYSQL_DATABASE=your_mysql_database
