--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,9 @@ services:
       - "8080:80"
     volumes:
       - .:/var/www/html
+      - /dev/null:/var/www/html/.env.local
     environment:
-      DB_HOST: ${DB_HOST}
-      DB_USER: ${DB_USER}
-      DB_PASS: ${DB_PASS}
-      MONGO_URI: ${MONGO_URI}
+      DB_HOST: localhost
     depends_on:
       - db
       - mongo
