--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-# Base de données
-DB_HOST=your_db_host
-DB_NAME=your_db_name
-DB_USER=your_db_user
-DB_PASS=your_db_password
+# Configuration base de données SQL
+DB_HOST=db
+DB_NAME=ecoride
+DB_USER=root
+DB_PASS=root
 
-# Configuration MySQL
-MYSQL_ROOT_PASSWORD=your_mysql_root_password
-MYSQL_DATABASE=your_mysql_database
+# Initialisation MySQL
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=ecoride
+
+# Configuration MongoDB
+MONGO_URI=mongodb://mongo:27017
